[package]
name = "chip_8"
version = "0.1.0"
authors = ["Danylo Kondratiev <knightpp@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
crossterm = "0.25.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
minifb = "0.23.0"

[profile.release]
lto = "fat"
codegen-units = 1
